[gd_scene load_steps=2 format=3 uid="uid://collective_actions_scene"]

[ext_resource type="Script" path="res://scripts/collective_actions_ui.gd" id="1_script"]

[node name="CollectiveActionsUI" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -350.0
offset_right = 320.0
offset_bottom = -20.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ActionTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ACCIONES COLECTIVAS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarchBtn" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Marcha (5+ contactos)"

[node name="AssemblyBtn" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Asamblea (2+ grupos)"

[node name="StrikeBtn" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Huelga (3+ grupos, 15+ contactos)"

[node name="FestivalBtn" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Festival (4+ grupos, 20+ contactos)"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionStatus" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Estado de la acci√≥n..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="CountdownLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tiempo restante: 30s"
horizontal_alignment = 1

[node name="ParticipantsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Participantes: 0/5"
horizontal_alignment = 1